objects/Account/Account.object-meta.xml
<CustomObject>
	<historyRetentionPolicy>
        <archiveAfterMonths>18</archiveAfterMonths>
        <archiveRetentionYears>2</archiveRetentionYears>
        <description>HIPAA Audit Log Retention Account</description>
        <gracePeriodDays>0</gracePeriodDays>
    </historyRetentionPolicy>
</CustomObject>