objects/Account/fields/AccountIdentifier__c.field-meta.xml
<CustomField>
    <fullName>AccountIdentifier__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>Unique identifier for Institute, Site or Patient that is system generated.</description>
    <displayFormat>ACT{0000}</displayFormat>
    <label>Account Identifier</label>
    <type>AutoNumber</type>
</CustomField>