objects/Account/fields/AccountOwnerName__c.field-meta.xml
<CustomField>
    <fullName>AccountOwnerName__c</fullName>
    <defaultValue>$User.FirstName+&apos; &apos;+ $User.LastName</defaultValue>
    <description>Field to display the Account Owner Last Name and First Name</description>
    <label>Account Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>