objects/Account/fields/CellTherapyOrderSpecialist__c.field-meta.xml
<CustomField>
    <fullName>CellTherapyOrderSpecialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be used to associate and operations coordinator with a treatment site</description>
    <label>Cell Therapy Order Specialist (CTOS)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RelatedAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>