objects/Account/fields/CryoPreservationPreference__c.field-meta.xml
<CustomField>
    <fullName>CryoPreservationPreference__c</fullName>
    <description>Describes if the treatment site is eligible for local or central Cryo.</description>
    <label>Cryo Preservation Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>