objects/Account/fields/CustomerCode__c.field-meta.xml
<CustomField>
    <fullName>CustomerCode__c</fullName>
    <description>This field is used to store treatment site customer code from SAP</description>
    <label>Customer Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>