objects/Account/fields/ERPSiteID__c.field-meta.xml
<CustomField>
    <fullName>ERPSiteID__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <description>ERP Site ID for Treatment Sites will be received from ERP System and ERP Site ID for Apheresis Sites &amp; Cryo Sites will be received from Anaplan.</description>
    <externalId>true</externalId>
    <inlineHelpText>ERP Site ID for Treatment Sites will be received from ERP System and ERP Site ID for Apheresis Sites &amp; Cryo Sites will be received from Anaplan</inlineHelpText>
    <label>ERP Site ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>