objects/Account/fields/PatientBirthDateReference__c.field-meta.xml
<CustomField>
    <fullName>PatientBirthDateReference__c</fullName>
    <description>The text field is created to be used in the matching criteria for the custom Person Account Matching Rule, and refers the PersonBirthdate field on Patient that being a date type field isn&#39;t supported in matching rules.</description>
    <label>Patient Birth Date Reference</label>
    <length>20</length>
    <type>Text</type>
</CustomField>