objects/Account/fields/PatientID__c.field-meta.xml
<CustomField>
    <fullName>PatientID__c</fullName>
    <description>External Patient Id For Patient Account</description>
    <externalId>true</externalId>
    <label>PatientID</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>