objects/Account/fields/PatientIdIdentifier__c.field-meta.xml
<CustomField>
    <fullName>PatientIdIdentifier__c</fullName>
    <description>Patient ID AutoNumber For External Patient Id Reference</description>
    <displayFormat>{00000000}</displayFormat>
    <startingNumber>10245365</startingNumber>
    <externalId>true</externalId>
    <label>PatientIdIdentifier</label>
    <type>AutoNumber</type>
</CustomField>