objects/Account/fields/PatientIDPrefix__c.field-meta.xml
<CustomField>
    <fullName>PatientIDPrefix__c</fullName>
    <defaultValue>IF( $RecordType.Name = &apos;Patient&apos;, &apos;US-&apos;,&apos;&apos;)</defaultValue>
    <description>Prefix for External Patient Id</description>
    <label>PatientIDPrefix</label>
    <length>8</length>
    <type>Text</type>
</CustomField>