objects/Account/fields/PreferredMethodOfCommunication__c.field-meta.xml
<CustomField>
    <fullName>PreferredMethodOfCommunication__c</fullName>
    <description>This field will be used to capture the Preferred Method of Communication.</description>
    <label>Preferred Method of Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Contact Number</fullName>
                <default>true</default>
                <label>Primary Contact Number</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>