objects/Account/fields/PrimaryContactNumberType__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContactNumberType__c</fullName>
    <description>Primary Contact Number Type captures the type of contact stored is Home or Mobile.</description>
    <label>Primary Contact Number Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
                <default>true</default>
                <label>Home</label>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>