objects/Account/fields/TreatmentConsent__c.field-meta.xml
<CustomField>
    <fullName>TreatmentConsent__c</fullName>
    <complianceGroup>GxP</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Patient consent for receiving the Treatment.</description>
    <label>Treatment Consent</label>
    <type>Checkbox</type>
</CustomField>