objects/Account/recordTypes/ApheresisSite.recordType-meta.xml
<RecordType>
    <fullName>ApheresisSite</fullName>
    <active>true</active>
    <description>Represents an apheresis site</description>
    <label>Apheresis Site</label>
</RecordType>