objects/Account/recordTypes/CryoSite.recordType-meta.xml
<RecordType>
    <fullName>CryoSite</fullName>
    <active>true</active>
    <description>Represents a cryo site</description>
    <label>Cryo Site</label>
</RecordType>