objects/Account/recordTypes/HealthSystem.recordType-meta.xml
<RecordType>
    <fullName>HealthSystem</fullName>
    <active>true</active>
    <description>Represents a health system</description>
    <label>Health System</label>
</RecordType>