objects/Account/recordTypes/ManufacturingSite.recordType-meta.xml
<RecordType>
    <fullName>ManufacturingSite</fullName>
    <active>true</active>
    <description>Represents a manufacturing site</description>
    <label>Manufacturing Site</label>
</RecordType>