objects/Account/recordTypes/SpecialtyDistributor.recordType-meta.xml
<RecordType>
    <fullName>SpecialtyDistributor</fullName>
    <active>true</active>
    <description>Represents a specialty distributor</description>
    <label>Specialty Distributor</label>
</RecordType>