objects/Account/recordTypes/TreatmentSite.recordType-meta.xml
<RecordType>
    <fullName>TreatmentSite</fullName>
    <active>true</active>
    <description>Represents a treatment site</description>
    <label>Treatment Site</label>
</RecordType>