objects/Account/validationRules/FirstNameIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>FirstNameIsRequired</fullName>
    <active>true</active>
    <description>First Name is required for Patient and Caregiver</description>
    <errorConditionFormula>AND( ISBLANK(FirstName) , OR(RecordType.DeveloperName =  $Label.PatientRecordtype ,RecordType.DeveloperName =  $Label.CaregiverRecordtype ))</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Please enter the First Name</errorMessage>
</ValidationRule>