objects/Account/validationRules/PatientStatusOnCreate.validationRule-meta.xml
<ValidationRule>
    <fullName>PatientStatusOnCreate</fullName>
    <active>false</active>
    <description>Validation Rule which fires on creation of Account based on certain criteria</description>
    <errorConditionFormula>AND(ISNEW(),($RecordType.DeveloperName = $Label.PatientRecordtype),
NOT(TEXT(Status__c) == $Label.PatientStatusPendingVerification))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>On Creation the Patient Status is defaulted to pending verification and cannot be changed</errorMessage>
</ValidationRule>