objects/Account/validationRules/ValidatePreferredMethodOfCommunication.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidatePreferredMethodOfCommunication</fullName>
    <active>true</active>
    <description>If Preferred Method of Communication id Email then Email field can not be blank.</description>
    <errorConditionFormula>AND( ISPICKVAL( PreferredMethodOfCommunication__c , &apos;Email&apos;) , ISBLANK( PersonEmail ) ,OR( RecordType.DeveloperName = $Label.PatientRecordtype,  RecordType.DeveloperName = $Label.CaregiverRecordtype))</errorConditionFormula>
    <errorDisplayField>PersonEmail</errorDisplayField>
    <errorMessage>Please enter the Email address</errorMessage>
</ValidationRule>