objects/Account/listViews/Caregivers.listView-meta.xml
<ListView>
    <fullName>Caregivers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>AccountOwnerName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Caregiver</value>
    </filters>
    <label>Caregivers</label>
    <language>en_US</language>
</ListView>