objects/Account/listViews/HealthSystems.listView-meta.xml
<ListView>
    <fullName>HealthSystems</fullName>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>AccountIdentifier__c</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>AccountOwnerName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.HealthSystem</value>
    </filters>
    <label>Health Systems</label>
    <language>en_US</language>
</ListView>