objects/Account/listViews/Patients.listView-meta.xml
<ListView>
    <fullName>Patients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>HealthCloudGA__MedicalRecordNumber__c</columns>
    <columns>AccountIdentifier__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <columns>AccountOwnerName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Patient</value>
    </filters>
    <label>Patients</label>
    <language>en_US</language>
</ListView>