objects/Account/listViews/Sites.listView-meta.xml
<ListView>
    <fullName>Sites</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ERPSiteID__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.ApheresisSite,Account.CryoSite,Account.ManufacturingSite,Account.TreatmentSite</value>
    </filters>
    <label>Sites</label>
    <language>en_US</language>
</ListView>